# baidu-moonshad-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  __init__.py  moonshad.py  pyproject.toml  requirements.txt  test_data.json  test_moonshad.py
.github/workflows/: ci.yml
baidu_moonshad_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
